# Kyrsovay

./: .gitignore  README.md  pyproject.toml
kursovay_account_transactions/: utils.py
tests/: test_utils.py
